updated library project

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">Tola Oniyangi <br>
-          <span class="subtitle"> Analysis, Visualization, Design </span>
+          <span class="subtitle"> <div id="analysis"> Analysis </div>,<div id="vis"> Visualization </div>, <div id="design"> Design </div> </span>
         </a>
       </div>
       <!-- navbar collapse  -->
@@ -58,10 +58,11 @@
 
         <!-- HOUSING - core III-->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail" id="design"> 
             <a href="projects/housing.html">
               <img src="img/intro_housing.gif" alt="">
-              <h3 class="thumbnailTitle"> Preserved Traces, Interstitial Spaces </h3>
+              <h3 class="thumbnailQuestion"> How can we redevelop a Bronx housing block that maintains traces of existing social, urban and environmental site conditions? </h3> <br>   
+              <h4 class="thumbnailTitle"> Preserved Traces, Interstitial Spaces </h4>            
             </a>
           </div>
         </div><!--/.item  -->
@@ -81,7 +82,7 @@
           <div class="thumbnail"> 
             <a href="projects/libraryanalysis.html">
               <img src="img/intro_libraryanalysis.png" alt="">
-              <h3 class="thumbnailTitle"> Dumbo: Analysis of An Urban Condition </h3>
+              <h3 class="thumbnailTitle"> Immersion Library, Dumbo: Analysis of An Urban Condition </h3>
             </a>
           </div>
         </div><!--/.item  -->
@@ -91,7 +92,7 @@
           <div class="thumbnail"> 
             <a href="projects/libraryproject.html">
               <img src="img/intro_libraryproject.gif" alt="">
-              <h3 class="thumbnailTitle"> Innovation Library, An Ode to the Museum </h3>
+              <h3 class="thumbnailTitle"> Immersion Library, Dumbo </h3>
             </a>
           </div>
         </div><!--/.item  -->                        
