--- a/projects/libraryanalysis.html
+++ b/projects/libraryanalysis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Dumbo Analysis </title>
+    <title>Tola Oniyangi | Library Analysis - Dumbo</title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
