--- a/projects/libraryproject.html
+++ b/projects/libraryproject.html
@@ -55,7 +55,7 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2> What does it mean to have an immersive space in which openness and solidity go hand in hand?   </h2>
+          <h2> What does it mean to have an interactive space in which structure is expressed externally while openness manifests through material and form? </h2>
           <p> This library project grapples with two main ideas: that systems of moving through space can be generative, and that tactility can influence access. Programs specific to Dumbo’s transient tech and tourist population as well as its more permanent student population connect the building to its <a href="libraryanalysis.html"  target="_blank"> context. </a> The experience of approaching the library, with its juxtaposition of a malleable and translucent inner volume and a solid steel structure, opens it up to patrons and passersby alike. The interior, which is almost entirely devoid of steel beams, features many mixing spaces between related programs. Finally, the intermediary moments within which people can walk over the exterior steel columns reconcile this inside/outside dichotomy. 
           </p> 
           <p class="additionalInfo"> Spring 2018. Core II. Critic: Gordon Kipping.
@@ -92,14 +92,38 @@
             </div>      
           </div>      
 
-          <div class="col-md-8">
-            <img src="../img/libraryproject_circulation_program.png"> 
-          </div>   
+          <div class="col-md-6">
+            <img src="../img/libraryproject_studymodelimg1.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/libraryproject_studymodelimg2.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/libraryproject_studymodelimg3.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/libraryproject_plates2.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/libraryproject_finalmodel_zoom.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/libraryproject_sectionalmodel1.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/libraryproject_finalmodels.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/libraryproject_sectionalmodel3.jpg"> 
+          </div>
 
           <div class="col-md-12">
             <img src="../img/libraryproject_section.png"> 
           </div>
 
+          <div class="col-md-6">
+            <img src="../img/libraryproject_circulation_program.png"> 
+          </div>   
           <div class="col-md-12">
             <img src="../img/libraryproject_1stFloor.jpg"> 
           </div>
@@ -115,12 +139,6 @@
           <div class="col-md-12">
             <img src="../img/libraryproject_5thFloor.jpg"> 
           </div>
-<!--           <div class="col-md-6">
-            <img src="../img/libraryproject_walkwayrender.png"> 
-          </div>
-         <div class="col-md-6">
-            <img src="../img/libraryproject_render.png"> 
-          </div> -->
 
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
