testing color on homepage

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Tola Oniyangi <br>
-          <span class="subtitle"> <div id="analysis"> Analysis </div>,<div id="vis"> Visualization </div>, <div id="design"> Design </div> </span>
+        <a class="navbar-brand" href="index.html"> Tola Oniyangi <br>
+          <span class="subtitle">   
+            <span id="analysis"> analysis , </span> <span id="vis"> visualization ,</span> <span id="design"> design </span> 
+          </span>
         </a>
       </div>
       <!-- navbar collapse  -->
@@ -58,171 +60,171 @@
 
         <!-- HOUSING - core III-->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail" id="design"> 
+          <div class="thumbnail"> <div id="design"> 
             <a href="projects/housing.html">
               <img src="img/intro_housing.gif" alt="">
-              <h3 class="thumbnailQuestion"> How can we redevelop a Bronx housing block that maintains traces of existing social, urban and environmental site conditions? </h3> <br>   
-              <h4 class="thumbnailTitle"> Preserved Traces, Interstitial Spaces </h4>            
+              <h4 class="thumbnailQuestion"> How can we redevelop a Bronx housing block that maintains traces of existing social, urban and environmental site conditions? </h4> <br>   
+              <h3 class="thumbnailTitle"> Preserved Traces, Interstitial Spaces </h3>            
             </a>
-          </div>
+          </div> </div>
         </div><!--/.item  -->
 
         <!-- TECH - theatre -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="design"> 
             <a href="projects/tech-theatre.html">
               <img src="img/intro_tech-theatre.gif" alt="">
               <h3 class="thumbnailTitle"> City, Theatre, Park </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- LIBRARY - Core II - analysis -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="analysis"> 
             <a href="projects/libraryanalysis.html">
               <img src="img/intro_libraryanalysis.png" alt="">
               <h3 class="thumbnailTitle"> Immersion Library, Dumbo: Analysis of An Urban Condition </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- LIBRARY - Core II - project -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="design"> 
             <a href="projects/libraryproject.html">
               <img src="img/intro_libraryproject.gif" alt="">
               <h3 class="thumbnailTitle"> Immersion Library, Dumbo </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->                        
 
         <!-- PIER - core 1 -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="design"> 
             <a href="projects/pier.html">
               <img src="img/pier_poolVignette.jpg" alt="">
               <h3 class="thumbnailTitle"> Hydro-habitat </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- SUBWAY - core 1 -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="design"> 
             <a href="projects/subway.html">
               <!-- <img src="img/intro_Subway.gif" alt=""> -->
               <img src="img/subway_crossSection.png" alt="">
               <h3 class="thumbnailTitle"> Processional Planes </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- CORNER - core 1 -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="design"> 
             <a href="projects/corner.html">
               <img src="img/intro_Corner.gif" alt="">
               <h3 class="thumbnailTitle"> Deconstructed Jenga </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- GIS final report : citibike -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="analysis"> 
             <a href="projects/citibike.html">
               <!-- <img src="img/intro_Citibike.gif" alt=""> -->
-              <img src="../img/citibike_FinalCover.jpg">
+              <img src="img/citibike_FinalCover.jpg">
               <h3 class="thumbnailTitle"> Citi Bike Accessibility </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
 
         <!-- MCDA GIS  -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="analysis"> 
             <a href="projects/MCDA_library.html">
               <img src="img/intro_MCDA.gif" alt="">
               <h3 class="thumbnailTitle"> Siting Libraries </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- DV final : airbnb -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail">
+          <div class="thumbnail"><div id="analysis"> 
             <a href="projects/airbnb.html">
               <!-- <img src="img/DV-Sp17_GroupTBD-sm.gif" alt=""> -->
               <img src="img/intro_airbnb.jpg" alt="">
               <h3 class="thumbnailTitle"> Airbnb Analysis </h3>
             </a> 
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- Visualization critique datavis  -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="vis"> 
             <a href="projects/datasketches.html">
               <!-- <img src="img/datasketches_animation.gif" alt=""> -->
               <img src="img/intro_datasketches.jpg" alt="">
               <h3 class="thumbnailTitle"> Visualization Critique </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- DMC  -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="vis"> 
             <a href="projects/urbansprawl.html">
               <img src="img/intro_dmc.gif" alt="">
               <h3 class="thumbnailTitle"> Predicting Urban Sprawl </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- LIBRARY  -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="design"> 
             <a href="projects/library.html">
               <img src="img/intro_Library.gif" alt="">
               <h3 class="thumbnailTitle"> Intersecting Program </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- IND RESEARCH  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="projects/globaltrajectories.html">
+            <a href="projects/globaltrajectories.html"><div id="vis"> 
               <!-- <img src="img/intro_IndResearch.gif" alt=""> -->
               <img src="img/indResearch_outsidebook.jpg">
               <h3 class="thumbnailTitle"> Global Trajectories: Local Origins </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
         
         <!-- DATASCAPES  -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="vis"> 
             <a href="projects/datascapes.html">
               <!-- <img src="img/intro_datascapes.gif" alt=""> -->
               <img src="img/intro_datascapes.jpg" alt="">
               <h3 class="thumbnailTitle"> Mapping the "Vibe" </h3>
             </a>
-          </div>
+          </div></div>
         </div><!--/.item  -->
 
         <!-- BRIDGE  -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
+          <div class="thumbnail"> <div id="design"> 
             <a href="projects/bridge.html">
               <!-- <img src="img/intro_Bridge.gif" alt=""> -->
               <img src="img/bridge_SitePlan.png"> 
               <h3 class="thumbnailTitle"> Blurring Boundaries </h3>
             </a>
-          </div>
+          </div> </div>
         </div><!--/.item  -->
 
         <!-- Logo Design for Tolu  -->
