fixed new styling

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="thumbnail"> <div id="design"> 
             <a href="projects/housing.html">
               <img src="img/intro_housing.gif" alt="">
-              <h4 class="thumbnailQuestion"> How can we redevelop a Bronx housing block that maintains traces of existing social, urban and environmental site conditions? </h4> <br>   
+              <h4 class="thumbnailQuestion"> How can we redevelop a Bronx housing block that maintains traces of existing social, urban and environmental site conditions? </h4>
               <h3 class="thumbnailTitle"> Preserved Traces, Interstitial Spaces </h3>            
             </a>
           </div> </div>
@@ -84,7 +84,7 @@
           <div class="thumbnail"> <div id="analysis"> 
             <a href="projects/libraryanalysis.html">
               <img src="img/intro_libraryanalysis.png" alt="">
-              <h3 class="thumbnailTitle"> Immersion Library, Dumbo: Analysis of An Urban Condition </h3>
+              <h3 class="thumbnailTitle"> Immersion Library: Analysis of An Urban Condition </h3>
             </a>
           </div></div>
         </div><!--/.item  -->
