--- a/projects/housing.html
+++ b/projects/housing.html
@@ -55,7 +55,7 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2> How can we redevelop a Bronx housing block that is in dialogue with existing social, urban and environmental site conditions? </h2>
+          <h2> How can a housing development maintain traces of existing social, urban and environmental site conditions? </h2>
           <p> This housing project explores ways to extend the current social and historic fabric in the Bronx site to a new housing typology. It integrates the existing townhouse typology, building materiality, and urban scale with a new tower and townhouse typology. Conditions of interstitial spaces, expressions of light and greenery through facade details, interior courtyards, and stripping of windows and roofs in some cases feature in the intersections between existing and proposed buildings. Some current residents’ retrofitting of the existing housing to serve both housing and commercial purposes, such as daycares, is respected in the proposed housing block where office and communal work spaces are a prominent feature. This interaction between old and new site conditions generates a dynamic housing block that interfaces with questions of preservation, minimalism and materiality. 
           </p> 
           <p class="additionalInfo"> In collaboration with Sara Al-Mutlaq. Fall 2018. Core III. Critic: Gabriela Etchegeray.
