--- a/projects/urbansprawl.html
+++ b/projects/urbansprawl.html
@@ -55,8 +55,8 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2>Can we create a model to predict the expansion of cities? </h2>
-          <p> In this machine learning project, a model that could predict urban sprawl was trained by being fed historical images of cities using Python. The model learnt to recognize built and unbuilt areas and identify them with different colors, and thus was able to predict future sprawl.</p> 
+          <h2>Can a machine learning model be trained to predict urban sprawl? </h2>
+          <p> In this project, a model was fed historic images of three cities using Python in order to predict future trends in urbanization. Once it learned to categorize built and unbuilt areas of said cities, it could categorize them and identify their trajectories over time. Applying this logic to future projections of urban change, the model was thus was able to predict future sprawl. </p> 
           <p class="additionalInfo"> Fall 2016. Data Mining the City - taught by Danil Nagy. In collaboration with Marwah Garib, Vrinda Sharma and Kun Qian. </p>    
         </div>
       </div></div>
