added questions + updated website

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           <div class="thumbnail"> <div id="design"> 
             <a href="projects/tech-theatre.html">
               <img src="img/intro_tech-theatre.gif" alt="">
+              <h4 class="thumbnailQuestion">  </h4> 
               <h3 class="thumbnailTitle"> City, Theatre, Park </h3>
             </a>
           </div></div>
@@ -84,6 +85,7 @@
           <div class="thumbnail"> <div id="analysis"> 
             <a href="projects/libraryanalysis.html">
               <img src="img/intro_libraryanalysis.png" alt="">
+              <h4 class="thumbnailQuestion"> How can one determine a project’s likely user demographics given its location? </h4> 
               <h3 class="thumbnailTitle"> Immersion Library: Analysis of An Urban Condition </h3>
             </a>
           </div></div>
@@ -94,7 +96,8 @@
           <div class="thumbnail"> <div id="design"> 
             <a href="projects/libraryproject.html">
               <img src="img/intro_libraryproject.gif" alt="">
-              <h3 class="thumbnailTitle"> Immersion Library, Dumbo </h3>
+              <h4 class="thumbnailQuestion"> What does it mean to express structure  externally and generate openness through material and form?   </h4> 
+              <h3 class="thumbnailTitle"> Immersion Library </h3>
             </a>
           </div></div>
         </div><!--/.item  -->                        
@@ -104,6 +107,7 @@
           <div class="thumbnail"> <div id="design"> 
             <a href="projects/pier.html">
               <img src="img/pier_poolVignette.jpg" alt="">
+              <h4 class="thumbnailQuestion"> Can architecture generate a stronger, more tangible relationship between people and water?  </h4>
               <h3 class="thumbnailTitle"> Hydro-habitat </h3>
             </a>
           </div></div>
@@ -115,6 +119,7 @@
             <a href="projects/subway.html">
               <!-- <img src="img/intro_Subway.gif" alt=""> -->
               <img src="img/subway_crossSection.png" alt="">
+              <h4 class="thumbnailQuestion"> Can light and the absence of it, as well as directionality of planes create distinct spaces with particular qualities?  </h4>
               <h3 class="thumbnailTitle"> Processional Planes </h3>
             </a>
           </div></div>
@@ -125,6 +130,7 @@
           <div class="thumbnail"> <div id="design"> 
             <a href="projects/corner.html">
               <img src="img/intro_Corner.gif" alt="">
+              <h4 class="thumbnailQuestion"> How do bodies traverse space, and how does the movement of time complicate this?  </h4>
               <h3 class="thumbnailTitle"> Deconstructed Jenga </h3>
             </a>
           </div></div>
@@ -136,6 +142,7 @@
             <a href="projects/citibike.html">
               <!-- <img src="img/intro_Citibike.gif" alt=""> -->
               <img src="img/citibike_FinalCover.jpg">
+              <h4 class="thumbnailQuestion"> How accessible is New York City’s Citi Bike network? Who benefits from it? Does accessibility change based on different proximity metrics? </h4>
               <h3 class="thumbnailTitle"> Citi Bike Accessibility </h3>
             </a>
           </div></div>
@@ -147,6 +154,7 @@
           <div class="thumbnail"> <div id="analysis"> 
             <a href="projects/MCDA_library.html">
               <img src="img/intro_MCDA.gif" alt="">
+              <h4 class="thumbnailQuestion"> Can the Queens Library System decide where to locate the next library based on demographic and locational factors? </h4>
               <h3 class="thumbnailTitle"> Siting Libraries </h3>
             </a>
           </div></div>
@@ -154,31 +162,34 @@
 
         <!-- DV final : airbnb -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"><div id="analysis"> 
+          <div class="thumbnail"><div id="analysis">
             <a href="projects/airbnb.html">
               <!-- <img src="img/DV-Sp17_GroupTBD-sm.gif" alt=""> -->
               <img src="img/intro_airbnb.jpg" alt="">
+              <h4 class="thumbnailQuestion"> How do Airbnb’s active users, i.e. those who write listings and leave reviews, conceive of New York City’s neighborhoods? </h4>
               <h3 class="thumbnailTitle"> Airbnb Analysis </h3>
             </a> 
           </div></div>
         </div><!--/.item  -->
 
         <!-- Visualization critique datavis  -->
-        <div class="col-md-4 col-sm-6 item">
+<!--         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> <div id="vis"> 
             <a href="projects/datasketches.html">
-              <!-- <img src="img/datasketches_animation.gif" alt=""> -->
               <img src="img/intro_datasketches.jpg" alt="">
+              <h4 class="thumbnailQuestion">  </h4>
               <h3 class="thumbnailTitle"> Visualization Critique </h3>
             </a>
           </div></div>
-        </div><!--/.item  -->
+        </div> -->
+        <!--/.item  -->
 
         <!-- DMC  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> <div id="vis"> 
             <a href="projects/urbansprawl.html">
               <img src="img/intro_dmc.gif" alt="">
+              <h4 class="thumbnailQuestion"> Can a machine learning model be trained to predict the expansion of cities? </h4>
               <h3 class="thumbnailTitle"> Predicting Urban Sprawl </h3>
             </a>
           </div></div>
@@ -189,6 +200,7 @@
           <div class="thumbnail"> <div id="design"> 
             <a href="projects/library.html">
               <img src="img/intro_Library.gif" alt="">
+              <h4 class="thumbnailQuestion"> How can we create space that is both specific and adaptable? </h4>
               <h3 class="thumbnailTitle"> Intersecting Program </h3>
             </a>
           </div></div>
@@ -200,6 +212,7 @@
             <a href="projects/globaltrajectories.html"><div id="vis"> 
               <!-- <img src="img/intro_IndResearch.gif" alt=""> -->
               <img src="img/indResearch_outsidebook.jpg">
+              <h4 class="thumbnailQuestion"> How can we study the relationship between precolonial Africa and the world through the people themselves? </h4>
               <h3 class="thumbnailTitle"> Global Trajectories: Local Origins </h3>
             </a>
           </div></div>
@@ -211,6 +224,7 @@
             <a href="projects/datascapes.html">
               <!-- <img src="img/intro_datascapes.gif" alt=""> -->
               <img src="img/intro_datascapes.jpg" alt="">
+              <h4 class="thumbnailQuestion"> How can we measure a neighborhood’s “vibe” and communicate it to a certain demographic?  </h4>
               <h3 class="thumbnailTitle"> Mapping the "Vibe" </h3>
             </a>
           </div></div>
@@ -222,6 +236,7 @@
             <a href="projects/bridge.html">
               <!-- <img src="img/intro_Bridge.gif" alt=""> -->
               <img src="img/bridge_SitePlan.png"> 
+              <h4 class="thumbnailQuestion"> This reinvented bridge and gangplank stems from the question: can one smoothen the transition from land to sea?  </h4>
               <h3 class="thumbnailTitle"> Blurring Boundaries </h3>
             </a>
           </div> </div>
