added buell center exhibition

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </button>
         <a class="navbar-brand" href="index.html"> Tola Oniyangi <br>
           <span class="subtitle">   
-            <span id="analysis"> analysis , </span> <span id="vis"> visualization ,</span> <span id="design"> design </span> 
+            <span id="design"> design , </span> <span id="vis"> visualization ,</span> <span id="analysis"> research + analysis </span> 
           </span>
         </a>
       </div>
@@ -68,6 +68,17 @@
             </a>
           </div> </div>
         </div><!--/.item  -->
+
+        <!-- Frank Lloyd Wright  -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> <div id="analysis"> 
+            <a href="https://buellcenter.columbia.edu/research-programs/frank-lloyd-wright/living-america-frank-lloyd-wright-harlem-modern-housing">
+              <img src="img/20170814_FLW&Harlem_web_assets_Facebook_reduced_0.jpg" alt="">
+              <h4 class="thumbnailQuestion"> Living in America: Frank Lloyd Wright, Harlem & Modern Housing </h4>
+              <h3 class="thumbnailTitle"> Buell Center Research Team </h3>
+            </a>
+          </div></div>
+        </div>
 
         <!-- TECH - theatre -->
         <div class="col-md-4 col-sm-6 item">
@@ -196,7 +207,7 @@
         </div><!--/.item  -->
 
         <!-- LIBRARY  -->
-        <div class="col-md-4 col-sm-6 item">
+<!--         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> <div id="design"> 
             <a href="projects/library.html">
               <img src="img/intro_Library.gif" alt="">
@@ -204,7 +215,7 @@
               <h3 class="thumbnailTitle"> Intersecting Program </h3>
             </a>
           </div></div>
-        </div><!--/.item  -->
+        </div> --><!--/.item  -->
 
         <!-- IND RESEARCH  -->
         <div class="col-md-4 col-sm-6 item">
