--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </a>
           </div></div>
         </div><!--/.item  -->
-        
+
         <!-- HOUSING - core III-->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> <div id="design"> 
@@ -86,10 +86,21 @@
             <a href="https://buellcenter.columbia.edu/research-programs/frank-lloyd-wright/living-america-frank-lloyd-wright-harlem-modern-housing">
               <img src="img/20170814_FLW&Harlem_web_assets_Facebook_reduced_0.jpg" alt="">
               <h4 class="thumbnailQuestion"> Living in America: Frank Lloyd Wright, Harlem & Modern Housing </h4>
-              <h3 class="thumbnailTitle"> Buell Center Research Team </h3>
+              <h3 class="thumbnailTitle"> Buell Center Exhibition Research Team </h3>
             </a>
           </div></div>
         </div>
+
+        <!-- LIBRARY - Core II - project -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> <div id="design"> 
+            <a href="projects/libraryproject.html">
+              <img src="img/intro_libraryproject.gif" alt="">
+              <h4 class="thumbnailQuestion"> What does it mean to express structure externally and generate openness through material and form?   </h4> 
+              <h3 class="thumbnailTitle"> Immersion Library </h3>
+            </a>
+          </div></div>
+        </div><!--/.item  -->                        
 
         <!-- LIBRARY - Core II - analysis -->
         <div class="col-md-4 col-sm-6 item">
@@ -101,18 +112,7 @@
             </a>
           </div></div>
         </div><!--/.item  -->
-
-        <!-- LIBRARY - Core II - project -->
-        <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> <div id="design"> 
-            <a href="projects/libraryproject.html">
-              <img src="img/intro_libraryproject.gif" alt="">
-              <h4 class="thumbnailQuestion"> What does it mean to express structure  externally and generate openness through material and form?   </h4> 
-              <h3 class="thumbnailTitle"> Immersion Library </h3>
-            </a>
-          </div></div>
-        </div><!--/.item  -->                        
-
+        
         <!-- PIER - core 1 -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> <div id="design"> 
