--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </button>
         <a class="navbar-brand" href="index.html"> Tola Oniyangi <br>
           <span class="subtitle">   
-            <span id="design"> design , </span> <span id="vis"> visualization ,</span> <span id="analysis"> research + analysis </span> 
+            <span id="design"> designer , </span><!--  <span id="vis"> visualization ,</span> --> <span id="analysis"> researcher </span> 
           </span>
         </a>
       </div>
@@ -193,7 +193,7 @@
             </a>
           </div></div>
         </div><!--/.item  -->
-        
+
         <!-- Visualization critique datavis  -->
 <!--         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> <div id="vis"> 
